--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
 		    <version>1.16</version>
 		</dependency>
 
+		<!-- query log -->
+		<dependency>
+			<groupId>org.lazyluke</groupId>
+			<artifactId>log4jdbc-remix</artifactId>
+			<version>0.2.7</version>
+		</dependency>
+
+
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
